--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <img src="assets/images/portfolio/p1.png" alt="portfolio image" class="img-fluid mb-3"/>
+                    <iframe src="grafik.html" width="100%" height="410"></iframe>
 					<p class="mb-4">Data Input:</p>
 					<p>Jumlah Track: 2000</p>
 					
