--- a/index.html
+++ b/index.html
@@ -177,12 +177,15 @@
                     <div class="row">
 
                         <div class="col-sm-9">
-                            <div class="item">
-                                <img src="assets/images/portfolio/p1.png" alt="portfolio image" data-toggle="modal" data-target="#portfolioModal1"/>
-                                <div class="isotope-overlay">
-                                    <a href="#" data-toggle="modal" data-target="#portfolioModal1"> <i class="fa fa-eye"></i> Lihat</a>
-                                </div><!-- /.isotope-overlay -->
-                            </div><!-- /.item -->
+				<div>
+					<p> <b> Tugas 1 </b></p>
+	                            <div class="item">
+	                                <img src="assets/images/portfolio/p1.png" alt="portfolio image" data-toggle="modal" data-target="#portfolioModal1"/>
+	                                <div class="isotope-overlay">
+	                                    <a href="#" data-toggle="modal" data-target="#portfolioModal1"> <i class="fa fa-eye"></i> Lihat</a>
+	                                </div><!-- /.isotope-overlay -->
+	                            </div><!-- /.item -->
+				</div>
                             <!-- <div class="item">
                                 <img src="assets/images/portfolio/p2.jpg" alt="portfolio image" data-toggle="modal" data-target="#portfolioModal2"/>
                                 <div class="isotope-overlay">
