--- a/index.html
+++ b/index.html
@@ -195,15 +195,15 @@
                             </div> -->
                         </div>
 
-                        <!-- <div class="col-sm-4">
+                        <div class="col-sm-4">
                             <div class="item">
-                                <img src="assets/images/portfolio/p3.jpg" alt="portfolio image" data-toggle="modal" data-target="#portfolioModal3"/>
+                                <img src="assets/images/portfolio/p2.jpg" alt="portfolio image" data-toggle="modal" data-target="#portfolioModal3"/>
                                 <div class="isotope-overlay">
                                     <a href="#" data-toggle="modal" data-target="#portfolioModal3">Web Design</a>
                                     <a href="#" class="view-button" data-toggle="modal" data-target="#portfolioModal3">View</a>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
 
                         <!-- <div class="col-sm-4">
                             <div class="item">
