--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
                             </div> -->
                         </div>
 
-                        <div class="col-sm-4">
+                        <div class="col-sm-7">
                             <div class="item">
-                                <img src="assets/images/portfolio/p2.jpg" alt="portfolio image" data-toggle="modal" data-target="#portfolioModal3"/>
+                                <img src="assets/images/portfolio/p1.png" alt="portfolio image" data-toggle="modal" data-target="#portfolioModal3"/>
                                 <div class="isotope-overlay">
                                     <a href="#" data-toggle="modal" data-target="#portfolioModal3">Web Design</a>
                                     <a href="#" class="view-button" data-toggle="modal" data-target="#portfolioModal3">View</a>
