--- a/index.html
+++ b/index.html
@@ -195,7 +195,26 @@
                             </div> -->
                         </div>
 
-                        <div class="col-sm-7">
+			    <div class="col-sm-7">
+				<div>
+					<p> <b> Tugas 1 </b></p>
+	                            <div class="item">
+	                                <img src="assets/images/portfolio/p1.png" alt="portfolio image" data-toggle="modal" data-target="#portfolioModal1"/>
+	                                <div class="isotope-overlay">
+	                                    <a href="#" data-toggle="modal" data-target="#portfolioModal1"> <i class="fa fa-eye"></i> Lihat</a>
+	                                </div><!-- /.isotope-overlay -->
+	                            </div><!-- /.item -->
+				</div>
+                            <!-- <div class="item">
+                                <img src="assets/images/portfolio/p2.jpg" alt="portfolio image" data-toggle="modal" data-target="#portfolioModal2"/>
+                                <div class="isotope-overlay">
+                                    <a href="#" data-toggle="modal" data-target="#portfolioModal2">UI/UX Design</a>
+                                    <a href="#" class="view-button" data-toggle="modal" data-target="#portfolioModal2">View</a>
+                                </div>
+                            </div> -->
+                        </div>
+
+<!--                         <div class="col-sm-7">
                             <div class="item">
                                 <img src="assets/images/portfolio/p1.png" alt="portfolio image" data-toggle="modal" data-target="#portfolioModal3"/>
                                 <div class="isotope-overlay">
@@ -203,7 +222,7 @@
                                     <a href="#" class="view-button" data-toggle="modal" data-target="#portfolioModal3">View</a>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
                         <!-- <div class="col-sm-4">
                             <div class="item">
