--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                             </div>
                         </div> -->
 
-                        <!-- <div class="col-sm-4">
+                        <div class="col-sm-4">
                             <div class="item">
                                 <img src="assets/images/portfolio/p4.jpg" alt="portfolio image" data-toggle="modal" data-target="#portfolioModal4"/>
                                 <div class="isotope-overlay">
@@ -222,7 +222,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div><!-- /.row -->
+                    </div><!-- /.row-->
                 </div><!--/.isotope-->
             </div><!--/.portfolio-content-->
         </div><!--/.container-->
