--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         </div>
 
 			   
-                        <div class="col-sm-7">
+<!--                         <div class="col-sm-7">
                             <div class="item">
                                 <img src="assets/images/portfolio/p1.png" alt="portfolio image" data-toggle="modal" data-target="#portfolioModal3"/>
                                 <div class="isotope-overlay">
@@ -221,7 +221,7 @@
                                     <a href="#" class="view-button" data-toggle="modal" data-target="#portfolioModal5">View</a>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div><!-- /.row-->
                 </div><!--/.isotope-->
             </div><!--/.portfolio-content-->
