--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                             </div>
                         </div> -->
 
-                        <div class="col-sm-4">
+<!--                         <div class="col-sm-4">
                             <div class="item">
                                 <img src="assets/images/portfolio/p4.jpg" alt="portfolio image" data-toggle="modal" data-target="#portfolioModal4"/>
                                 <div class="isotope-overlay">
@@ -220,8 +220,8 @@
                                     <a href="#" data-toggle="modal" data-target="#portfolioModal5">Web Development</a>
                                     <a href="#" class="view-button" data-toggle="modal" data-target="#portfolioModal5">View</a>
                                 </div>
-                            </div>
-                        </div> -->
+                            </div> -->
+<!--                         </div> --> -->
                     </div><!-- /.row-->
                 </div><!--/.isotope-->
             </div><!--/.portfolio-content-->
